--- a/2021-2022.md
+++ b/2021-2022.md
@@ -572,40 +572,44 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 ### 「人＋に」：「その人が～」の意味。
 
 1. 可能の意味 (capacité, possibilité)（「～が」と言い換えられる）
->春子さんはずっとお休みです。心配ですが、メールを送っても返事がないし、私<span style="color:red">に</span>わかることは何もないんです。
+> 春子さんはずっとお休みです。心配ですが、メールを送っても返事がないし、私<span style="color:red">に</span>わかることは何もないんです。
 2. 使役 (causatif)
->社長への説明は、私<span style="color:red">に</span>させてください。*（私がする）*
+> 社長への説明は、私<span style="color:red">に</span>させてください。*（私がする）*
 3. 受身 (passif)
 テストがよく出来て、先生にほめられた。*(先生がほめた）*
 4. 授受（やりもらい：donner & recevoir)
->この指輪は彼<span style="color:red">に</span>もらった。*(彼がくれた）*
+> この指輪は彼<span style="color:red">に</span>もらった。*(彼がくれた）*
 
 ＊❗②・④は「～が」には言い換えられない
 
 ### 「人＋には」(pour qqn)
 
 「他の人ではなく、その人の立場から見ると」という意味。
->このお酒は、私<span style="color:red">には</span>強すぎる。
+> このお酒は、私<span style="color:red">には</span>強すぎる。
+
 <!-- -->
->この数学の問題は、中学生<span style="color:red">には</span>難しい。
+> この数学の問題は、中学生<span style="color:red">には</span>難しい。
 
 ## 4. 助詞の変化：が->の <a name="chapter_3_4"></a>
 - Dans la proposition déterminante
 
->これは<u>父｛が/の｝かいた</u>絵です。
+> これは<u>父｛が/の｝かいた</u>絵です。
+
 <!-- -->
->そのイベントには、<u>アニメ｛が/の｝好きな</u>人がたくさん来た。
+> そのイベントには、<u>アニメ｛が/の｝好きな</u>人がたくさん来た。
 
 - Dans la proposition du temps
 
 >子供｛が/の｝いる時に、たばこはすわないでください。
+
 <!-- -->
->雨｛が/の｝降る日は、家で本を読んでいます。
+> 雨｛が/の｝降る日は、家で本を読んでいます。
 
 ❗Pas dechangement dans la proposition subordonnée avec ため/から/ので
->熱{❌の/✅が}あるから、会社を休みます。
+> 熱{❌の/✅が}あるから、会社を休みます。
+
 <!-- -->
->地下鉄{❌の/✅が}遅れたので、学校に遅刻した。
+> 地下鉄{❌の/✅が}遅れたので、学校に遅刻した。
 
 ## 5. ～ことになる / ～ことにする <a name="chapter_3_5"></a>
 
@@ -613,14 +617,16 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 Vdico / Vない + ことになる
 
->来月の会議で、（私が）新製品の説明をする<span style="color:red">ことになりました</span>。
+> 来月の会議で、（私が）新製品の説明をする<span style="color:red">ことになりました</span>。
+
 <!-- -->
 >台風が近づいているので、明日の運動会は行わない<span style="color:red">ことになった</span>。
+
 <!-- -->
 >この道は、来月から路上駐車ができない<span style="color:red">ことになった</span>。
 
 ＊自分で決めたことでも、それを言わないように「～ことになる」を使うときもある。
->会社をやめて、父の仕事を手伝う<span style="color:red">ことになりました</span>。
+> 会社をやめて、父の仕事を手伝う<span style="color:red">ことになりました</span>。
 
 ### ことになっている -> 予定や規則など
 
@@ -628,37 +634,43 @@ Vdico / Vない + ことになっている
 	
 >来月の出張で、ロンドンとパリに行く<span style="color:red">ことになっている</span>。
 <!-- -->
->パリでは、洗濯物を外に干してはいけない<span style="color:red">ことになっている</span>。
+> パリでは、洗濯物を外に干してはいけない<span style="color:red">ことになっている</span>。
 	
 ### ことにする -> 決めるのは自分
 
 Vdico / Vない + ことにする
 	
 >いろいろ考えました、会社をやめて留学する<span style="color:red">ことにしました</span>。
+
 <!-- -->
->来年、JLPTのN3を受ける<span style="color:red">ことにしました</span>。
+> 来年、JLPTのN3を受ける<span style="color:red">ことにしました</span>。
+
 <!-- -->
->風をひいているので、今晩のパーティーには、行かない<span style="color:red">ことにしました</span>。
+> 風をひいているので、今晩のパーティーには、行かない<span style="color:red">ことにしました</span>。
 	
 ### ことにしている -> 習慣
 
 Vdico / Vない + このにしている
 
 > 健康のために、毎日一万歩、歩く<span style="color:red">ことにしている</span>。
+
 <!-- -->
->食事のときは、たばこを吸わない<span style="color:red">ことにしている</span>。
+> 食事のときは、たばこを吸わない<span style="color:red">ことにしている</span>。
 	
 ## 6. 省略 Omission（　）<a name="chapter_3_6"></a>
 
 文を最後まで言わないことがある。
 	
->すみません、駅にいきたい<span style="color:red">んですが。。。</span>（どこにあるか教えていただけませんか）
+> すみません、駅にいきたい<span style="color:red">んですが。。。</span>（どこにあるか教えていただけませんか）
+
 <!-- -->
->先生に聞いてみ<span style="color:red">たら</span>↗️(どうですか）。
+> 先生に聞いてみ<span style="color:red">たら</span>↗️(どうですか）。
+
 <!-- -->
->先生に聞け<span style="color:red">ば</span>↗️（いいですよ）。
+> 先生に聞け<span style="color:red">ば</span>↗️（いいですよ）。
+
 <!-- -->
->内田　：マリーさん、日本語上手になりましたね。
+> 内田　：マリーさん、日本語上手になりましたね。
 マリー：いええ、まだまだです。もっと勉強し<span style="color:red">ないと</span>（いけません）。
 	
 ## 7. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」<a name="chapter_3_7"></a>
@@ -666,11 +678,13 @@ Vdico / Vない + このにしている
 普通形の会話のとき->「～ものだから」「～もんだから」
 
 >今週フランスから両親が来ている<span style="color:red">ものですから</span>、飲み会に行けないんです。
+
 <!-- -->
->先生：今日も宿題をして来なかったんですか。  
+> 先生：今日も宿題をして来なかったんですか。  
 学生：すみません。バイトが忙しかった<span style="color:red">ものですから</span>（宿題が出来ませんでした）。
+
 <!-- -->
->姉：また服をかったの。  
+> 姉：また服をかったの。  
 妹：バーゲンで、すごく安かった<span style="color:red">ものだから</span>（買いすぎちゃった）。
 	
 - ❗18歳になった｛✅から・✅ので・❌ものだから｝、車の運転ができますね。
@@ -679,7 +693,7 @@ Vdico / Vない + このにしている
 ## 8. Vて＋いただけないでしょうか <a name="chapter_3_8"></a>
 とても丁寧な表現->上司・知らない人・親しくない人へのお願い。
 
->電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
+> 電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
 	
  ⭐ 丁寧のレベル（人によって少し違うことがある）
  
@@ -698,11 +712,12 @@ Vdico / Vない + このにしている
 ## 9. ただ＋Vdico＋だけでいい <a name="chapter_3_9"></a>
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
->川田：マリーさん、フランス語を教えていただけないでしょうか。  
+> 川田：マリーさん、フランス語を教えていただけないでしょうか。  
 マリーさん：えっ、私が教えるんですか。それはちょっと。。。
 川田：<span style="color: red">ただ</span>発音を直してもらう<span style="color: red">だけでいい</span>んです。お願いします。
+
 <!-- -->
->町田：このスマホで写真をとる時は、どうすればいいんですか。  
+> 町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
 ## 10 助詞＋は : Emphase <a name="chapter_3_10"></a>
@@ -711,20 +726,24 @@ Vdico / Vない + このにしている
 - 「を」「が」-> 「<s>を</s>＋は」「<s>が</s>＋は」
 
 > ご飯を＋<span style="color:red">は</span>　食べた -> ご飯<span style="color:red">は</span>食べた。
+
 <!-- -->
 > 肉が＋<span style="color:red">は</span>　好きが -> 肉<span style="color:red">は</span>好きだ。
 
 - 「へ」「に」 -> 「<s>へ</s>＋は」「へ＋は」「<s>に</s>＋は」「に＋は」
 
 > モン・サン・ミッシェル{<span style="color:red">は</span>/へ<span style="color:red">は</span>}もう行きましたか。
+
 <!-- -->
 > 横浜も神戸も港町が、神戸{<span style="color:red">は</span>/に<span style="color:red">は</span>}空港がある。
 
 - 他の助詞 -> 「は」をつける
 
 > 駅まで<span style="color:red">は</span>徒歩で15分くらいかかる。
+
 <!-- -->
 > たくさん食べてしまいました、明日から<span style="color:red">は</span>ダイエットをするつもりです。
+
 <!-- -->
 >　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
 
@@ -810,12 +829,10 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 ＊ア～
 
 > 安田：先週一緒に食事した田中せん、今度転職するんだって。
-<!-- -->
+
 > 木村：えっ、<span style="color:red">あの</span>人が？どこの会社？
 
 &emsp;&emsp;（安田さん：知っている・木村さん：知っている）
-
-===
 
 > 先週食べた、<span style="color:red">あの</span>カレーは、おいしかったなあ。
 
@@ -825,27 +842,23 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 ＊ソ～
 
 > 原田：「君の名は。」という日本の映画を知っていますか。昨日見ましたが、すごく面白かったですよ。
-<!-- -->
+
 >　川上：いいえ、知りません。<span style="color:red">その</span>映画は、アニメなんですか。
 
 &emsp;&emsp;（原田さん：知っている・川上：知らない）
 
-===
-
 > 真理：由美ちゃんの会社に、今年の新入社員、いるの。
-<!-- -->
+
 > 由美：うん、一人だけ。でも、やる気があって、毎朝8時に自転車で会社に来るんだよ。
-<!-- -->
+
 > 真理：へえ、<span style="color:red">その</span>人は家が近いの。
-<!-- -->
+
 > 由美：ううん、自転車で１時間半くらいかかるんだって。
 
 &emsp;&emsp;（真理さん：知らない・由美さん：知っている）
 
-===
-
 > 青山：山田さんは昔フランスに住んでいたようですが、<span style="color:red">その</span>ころの話を聞いたことがありますか。
-<!-- -->
+
 > 南田：いいえ。私も<span style="color:red">その</span>ころの話を聞いてみたいんですか、まだチャンスがなくて。
 
 &emsp;&emsp;（二人も知らない）
@@ -855,7 +868,8 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 ＊コ～
 
 > 中川：友人がアマチュアのミュージシャンで歌を作ったんですが、<span style="color:red">これ</span>がすごくいいんですよ。
-長島：へえ、聞いてみたいですね。
+
+> 長島：へえ、聞いてみたいですね。
 
 &emsp;&emsp;（中川さん：知っている・長島さん：知らない）
 
@@ -865,22 +879,19 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 (faire partie de)ところ」の意味。
 
 > 部長：後で私<span style="color:red">のところ</span>に来てください。
-<!-- -->
+
 > 山田：はい、わかりました。
 
 &emsp;&emsp;❌　後で私に来てください。
 
-＝＝＝
-
 > 田中：あれ？めがねがない。
-<!-- -->
+
 > 山中：パソコン<span style="color:red">のところ</span>にあります。
 
 &emsp;&emsp;❌　パソコンにあります。
 
-===
-
 > 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。
+
 > 三島：大丈夫ですよ？じゃあ、会議を予約しておきます。
 
 ## 3. V(さ)せていただけたい：Vcausatif＋ていただけたい <a name="chapter_4_3"></a>
@@ -893,8 +904,10 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 - 1er : 読ま{-<span style="color:red">ない</span> / +<span style="color:green">せる</span>}
 
 > 新しいプロジェクトに、参加<span style="color:red">させていただきたい</span>んですが。
+
 <!-- -->
 > 来月の会議に、是非私も出席<span style="color:red">させていただきたい</span>んですが。
+
 <!-- -->
 > この小説の映画を、是非私に作ら<span style="color:red">せていただきたい</span>んです！
 
