Fix formatting quote on github

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -172,7 +172,7 @@ Irrégulier :
 - する -> <span style="color:red">すれば</span>  
 - 来る -> <span style="color:red">来れば</span>
 
-> 山田：そのパソコンを使いたいんですが、田中さんに言え<span style="color:red">ばいい</span>  ですか。
+> 山田：そのパソコンを使いたいんですが、田中さんに言え<span style="color:red">ばいい</span>  ですか。  
 > 森川：いいえ、課長に言って許可をもらってください。
 
 <!-- -->
@@ -187,11 +187,9 @@ Irrégulier :
 
 ＊言葉の意味の説明。
 
-> デュポン：あそこに書いてある「終日禁煙」って、どういう意味ですか。
-
-> 秋山：「終日禁煙」<span style="color:red">というのは</span>、一日中たばこをす<span style="color:red">ってはいけないっていうこです</span>。
-
-> でュポン：そうですか。今は、たばこをすえない場所が多いですね。
+> デュポン：あそこに書いてある「終日禁煙」って、どういう意味ですか。  
+> 秋山：「終日禁煙」<span style="color:red">というのは</span>、一日中たばこをす<span style="color:red">ってはいけないっていうこです</span>。  
+> デュポン：そうですか。今は、たばこをすえない場所が多いですね。
 
 <!-- -->
 > 「不便」<span style="color:red">とういのは</span>、便利じゃない<span style="color:red">ということです</span>。
@@ -331,31 +329,22 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 - 「～ですか / ますか」の丁寧な言い方
 
-> 店員：こちらのシャツは、いかが<span style="color:red">でしょうか</span>。
-
+> 店員：こちらのシャツは、いかが<span style="color:red">でしょうか</span>。  
 > 客：そうですね。これ、試着できますか。
 
 <!-- -->
-> マルタン：もしもし、技術部のマルタンですが、中山さんはいらっしゃいますか。
-
-> 田中：申し訳ありません。中山は、ただいま外出中です。
-
-> マルタン：いつごろお戻りになる<span style="color:red">でしょうか</span>。
-
-> 田中：4時ごろには戻ると思います。
-
+> マルタン：もしもし、技術部のマルタンですが、中山さんはいらっしゃいますか。  
+> 田中：申し訳ありません。中山は、ただいま外出中です。  
+> マルタン：いつごろお戻りになる<span style="color:red">でしょうか</span>。  
+> 田中：4時ごろには戻ると思います。  
 > マルタン：わかりました。またお電話します。
 
 - 許可をもらう場合（丁寧にお願いする）->　Vてもいいでしょうか / Vてもよろしいでしょうか
 
-> マルタン：すみません、この辞書、ちょっとお借りしてもいい<span style="color:red">でしょうか</span>。
-
-> 山田：ええ、どうぞ。
-
-> 西川：課長、明日病院に行きたいので、午後から出社してもよろしい<span style="color:red">でしょうか</span>。
-
-> 課長：わかりました。2時の会議には出席できますよね。
-
+> マルタン：すみません、この辞書、ちょっとお借りしてもいい<span style="color:red">でしょうか</span>。  
+> 山田：ええ、どうぞ。  
+> 西川：課長、明日病院に行きたいので、午後から出社してもよろしい<span style="color:red">でしょうか</span>。  
+> 課長：わかりました。2時の会議には出席できますよね。  
 > 西川：はい、大丈夫です。ありがうございます。
 
 ## 4. あいにく <a name="chapter_2_4"></a>
@@ -370,39 +359,30 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 2. 相手に都合が悪い状態（A)、自分に都合が悪い状態（B)でも、どちらでも使える。  
 
 (A)
-> 林：山本さん、一緒にケーキを食べませんか。
-
+> 林：山本さん、一緒にケーキを食べませんか。  
 > 山本：<span style="color:red">あいにく</span>、お昼ご飯を食べたばかりで、お腹がいっぱいで…。すみません。
 
 <!-- -->
-> 客： 広告でみた、青いセーターがほしいんですが。
-
+> 客： 広告でみた、青いセーターがほしいんですが。  
 > 店員：申し訳ありません。<span style="color:red">あいにく</span>、売りきれてしまったんですか…。
 
 (B)
-> 美術館へ行ったら、<span style="color:red">あいにく</span>休館日だった。
-
+> 美術館へ行ったら、<span style="color:red">あいにく</span>休館日だった。  
 > 3月にスキーに行くつもりだったが、<span style="color:red">あいにく</span>ロックダウンになって行けなかった。
 
 ## 5. ～と伝えていただきたい  <a name="chapter_2_5"></a>
 
 ＊伝言を頼む時の、とても丁寧な言い方。
 
-> 中山：田中さんに、部長の日本出張は10月20日から28日に決まった<span style="color:red">と伝えていただきたい</span>んですが…。
-
+> 中山：田中さんに、部長の日本出張は10月20日から28日に決まった<span style="color:red">と伝えていただきたい</span>んですが…。  
 > 高木：わかりました。そう伝えます。
 
 <!-- -->
-> デュポン：もしもし、林先生のお宅ですか。
-
-> 林夫人：はい、そうです。
-
-> デュポンと申しますがが、林先生はいらっしゃいますか。
-
-> 林夫人：あいにく、ちょうっと出かけております。
-
-> そうですか…。では、すみませんが、JLPTのN3に合格した<span style="color:red">と伝えていただきたい</span>んですが…。
-
+> デュポン：もしもし、林先生のお宅ですか。  
+> 林夫人：はい、そうです。  
+> デュポンと申しますがが、林先生はいらっしゃいますか。  
+> 林夫人：あいにく、ちょうっと出かけております。  
+> そうですか…。では、すみませんが、JLPTのN3に合格した<span style="color:red">と伝えていただきたい</span>んですが…。  
 > 林夫人：そうですか。おめでとうございます。主人が戻りました、そのように*伝えておきます。
 
 
@@ -440,23 +420,19 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 </table>
 
 上司の家に電話：
->　林：山田部長に、受付で<span style="color:blue">お待ちください</span>と伝えていただきたいんですが。
-
+>　林：山田部長に、受付で<span style="color:blue">お待ちください</span>と伝えていただきたいんですが。  
 > 山田の家族：はい、分かりました。受付で待つように(Vdico＋ように）<span style="color:red">というとこですね</span>。
 
 友達の家へ電話：
-> 林：田中さんに、新宿駅西口で<span style="color:blue">待っていてほしい</span>と伝えていただきたいんですが。
-
+> 林：田中さんに、新宿駅西口で<span style="color:blue">待っていてほしい</span>と伝えていただきたいんですが。  
 > 田中の家族：分かりました。新宿駅西口｛<span style="color:blue">待っていてほしい</span><span style="color:red">ということですね</span>　/　<span style="color:blue">待っているように</span><span style="color:red">というとこですね</span>｝。
 
 知らない人との会話：
-> 林：中川さん、私は来週の会議に<span style="color:blue">出席する</span>と伝えていただきたいんですが。
-
+> 林：中川さん、私は来週の会議に<span style="color:blue">出席する</span>と伝えていただきたいんですが。  
 > 中川の同僚：分かりました。来週の会議に<span style="color:blue">出席される</span><span style="color:red">>ということですね</span>。
 
 知らない人との会話
-> 林：砂糖さんに、会議は<span style="color:blue">3時からになった</span>と伝えていただきたいんですが。
-
+> 林：砂糖さんに、会議は<span style="color:blue">3時からになった</span>と伝えていただきたいんですが。  
 > 砂糖の同僚：会議は3時<span style="color:blue">から（になった）</span><span style="color:red">ということですね</span>。
 
 ## 7. Nだけでなく、Nも　/　Vdicoだけでなく、Vdicoのも <a name="chapter_2_7"></a>
@@ -471,15 +447,12 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 ## 8. もし＋普通形 / なadj<s>な</s> ＋ なら（「中級へ行こう」第7課） <a name="chapter_2_8"></a>
 
-> 山田：天気予報によると、週末は雪が降るそうですよ。
-
+> 山田：天気予報によると、週末は雪が降るそうですよ。  
 > スミス：本当ですか。鎌倉に行きたかったんですが、雪が降る<span style="color:red">なら</span>家にいます。
 
 <!-- -->
-> 中川：ジャックさん、来週みんなでボウリングに行きませんか。
-
-> ジャック：ボウリングですか。う～ん、したことがないので、できるかな…。
-
+> 中川：ジャックさん、来週みんなでボウリングに行きませんか。  
+> ジャック：ボウリングですか。う～ん、したことがないので、できるかな…。  
 > 中川：もし行く<span style="color:red">なら</span>、明後日までに、連絡してくださいね。
 
 
@@ -549,22 +522,17 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 ＊丁寧な言い方は「Vていただきたいんですが」。上司や目上の人に使われる。
 
-> マリー：すみません。新幹線の切符の買い方を教え<span style="color:red">てほしい</span>んですが。
-
-> 春子：これから駅まで行くので、一緒に買いましょう。
-
+> マリー：すみません。新幹線の切符の買い方を教え<span style="color:red">てほしい</span>んですが。  
+> 春子：これから駅まで行くので、一緒に買いましょう。  
 > マリー：ありがとうございます。
 
 <!-- -->
-> 母：守君、パーティーの準備を伝えっ<span style="color:red">てほしい</span>んだけと・・・。
-
+> 母：守君、パーティーの準備を伝えっ<span style="color:red">てほしい</span>んだけと・・・。  
 > 守：いいよ、じゃあ、このお皿を運ぶね。 
 
 <!-- -->
-> 内田：課長、お忙しい時にすみません。明日のご予定を教え<span style="color:red">ていただきたい</span>んですが。
-
-> 課長：明日は、10時から12時まで外出しますが、午後はずっとオフィスにいますよ。
-
+> 内田：課長、お忙しい時にすみません。明日のご予定を教え<span style="color:red">ていただきたい</span>んですが。  
+> 課長：明日は、10時から12時まで外出しますが、午後はずっとオフィスにいますよ。  
 > 内田：わかりました。ありがとうございます。
 
 
@@ -633,6 +601,7 @@ Vdico / Vない + ことになる
 Vdico / Vない + ことになっている
 	
 >来月の出張で、ロンドンとパリに行く<span style="color:red">ことになっている</span>。
+
 <!-- -->
 > パリでは、洗濯物を外に干してはいけない<span style="color:red">ことになっている</span>。
 	
@@ -713,8 +682,8 @@ Vdico / Vない + このにしている
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
 > 川田：マリーさん、フランス語を教えていただけないでしょうか。  
-マリーさん：えっ、私が教えるんですか。それはちょっと。。。
-川田：<span style="color: red">ただ</span>発音を直してもらう<span style="color: red">だけでいい</span>んです。お願いします。
+> マリーさん：えっ、私が教えるんですか。それはちょっと。。。
+> 川田：<span style="color: red">ただ</span>発音を直してもらう<span style="color: red">だけでいい</span>んです。お願いします。
 
 <!-- -->
 > 町田：このスマホで写真をとる時は、どうすればいいんですか。  
@@ -800,14 +769,19 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 </table>
 
 > 祖母、毎朝新聞を<span style="color:red">読み</span>、コーヒーを飲む。
+
 <!-- -->
 > 紙の辞書はとても大き<span style="color:red">く</span>、重かった。
+
 <!-- -->
 > アプリの辞書はとても便利<span style="color:red">で</span>、使いやすかった。
+
 <!-- -->
 > 彼は高校の先生<span style="color:red">で</span>、英語を教えている。
+
 <!-- -->
 > みそ汁の色、地方に<span style="color:red">より</span>違う。
+
 <!-- -->
 > 朝起きたら雨が降って<span style="color:red">おり</span>、試合は中止になった。
 
@@ -828,8 +802,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <hr>
 ＊ア～
 
-> 安田：先週一緒に食事した田中せん、今度転職するんだって。
-
+> 安田：先週一緒に食事した田中せん、今度転職するんだって。  
 > 木村：えっ、<span style="color:red">あの</span>人が？どこの会社？
 
 &emsp;&emsp;（安田さん：知っている・木村さん：知っている）
@@ -841,24 +814,19 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <hr>
 ＊ソ～
 
-> 原田：「君の名は。」という日本の映画を知っていますか。昨日見ましたが、すごく面白かったですよ。
-
+> 原田：「君の名は。」という日本の映画を知っていますか。昨日見ましたが、すごく面白かったですよ。  
 >　川上：いいえ、知りません。<span style="color:red">その</span>映画は、アニメなんですか。
 
 &emsp;&emsp;（原田さん：知っている・川上：知らない）
 
-> 真理：由美ちゃんの会社に、今年の新入社員、いるの。
-
-> 由美：うん、一人だけ。でも、やる気があって、毎朝8時に自転車で会社に来るんだよ。
-
-> 真理：へえ、<span style="color:red">その</span>人は家が近いの。
-
+> 真理：由美ちゃんの会社に、今年の新入社員、いるの。  
+> 由美：うん、一人だけ。でも、やる気があって、毎朝8時に自転車で会社に来るんだよ。  
+> 真理：へえ、<span style="color:red">その</span>人は家が近いの。  
 > 由美：ううん、自転車で１時間半くらいかかるんだって。
 
 &emsp;&emsp;（真理さん：知らない・由美さん：知っている）
 
-> 青山：山田さんは昔フランスに住んでいたようですが、<span style="color:red">その</span>ころの話を聞いたことがありますか。
-
+> 青山：山田さんは昔フランスに住んでいたようですが、<span style="color:red">その</span>ころの話を聞いたことがありますか。  
 > 南田：いいえ。私も<span style="color:red">その</span>ころの話を聞いてみたいんですか、まだチャンスがなくて。
 
 &emsp;&emsp;（二人も知らない）
@@ -867,8 +835,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 ＊コ～
 
-> 中川：友人がアマチュアのミュージシャンで歌を作ったんですが、<span style="color:red">これ</span>がすごくいいんですよ。
-
+> 中川：友人がアマチュアのミュージシャンで歌を作ったんですが、<span style="color:red">これ</span>がすごくいいんですよ。  
 > 長島：へえ、聞いてみたいですね。
 
 &emsp;&emsp;（中川さん：知っている・長島さん：知らない）
@@ -878,20 +845,17 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 その人や物が「いる/ある場所、その近く、会社など所属する
 (faire partie de)ところ」の意味。
 
-> 部長：後で私<span style="color:red">のところ</span>に来てください。
-
+> 部長：後で私<span style="color:red">のところ</span>に来てください。  
 > 山田：はい、わかりました。
 
 &emsp;&emsp;❌　後で私に来てください。
 
-> 田中：あれ？めがねがない。
-
+> 田中：あれ？めがねがない。  
 > 山中：パソコン<span style="color:red">のところ</span>にあります。
 
 &emsp;&emsp;❌　パソコンにあります。
 
-> 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。
-
+> 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。  
 > 三島：大丈夫ですよ？じゃあ、会議を予約しておきます。
 
 ## 3. V(さ)せていただけたい：Vcausatif＋ていただけたい <a name="chapter_4_3"></a>
@@ -914,6 +878,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <hr>
 
 > 頭が痛いので、帰ら<span style="color:red">せていただきたい</span>んですが。
+
 <!-- -->
 > 子供が病気なので、休ま<span style="color:red">せていただきたい</span>んですか。
 
@@ -941,28 +906,20 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 ## 5. V普通形＋の？<a name="chapter_4_5"></a>
 
-> A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）
-
-> B：うん。
-
-> A：どこへ<span style="color:red">行くの？</span>↗️（＝行くんですか？）
-
+> A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）  
+> B：うん。  
+> A：どこへ<span style="color:red">行くの？</span>↗️（＝行くんですか？）  
 > B：アメリカへ<span style="color:red">行くの</span>↘️（＝行くんだ）
 
 <!-- -->
-> A：ケータイをなくしたんですか。/ ケータイをなくしたの？
-
-> B：どこかて落としたんです。/ どこかで落としたの。
-
-> A：どこで失くしたんですか。/ どこで失くしたの？
-
+> A：ケータイをなくしたんですか。/ ケータイをなくしたの？  
+> B：どこかて落としたんです。/ どこかで落としたの。  
+> A：どこで失くしたんですか。/ どこで失くしたの？  
 > B：わかりません。/ わからないの。
 
 <!-- -->
-> A：どうしたんですか。/ どうしたの？
-
-> B：気分が悪いんですか。/ 気分がわるいの？
-
+> A：どうしたんですか。/ どうしたの？  
+> B：気分が悪いんですか。/ 気分がわるいの？  
 > C：頭が痛いんです。 / 頭が痛いの。
 
 ## 6. Vてくる・Vていく <a name="chapter_4_6"></a>
