Add missing name in quote

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -382,9 +382,9 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > デュポン：もしもし、林先生のお宅ですか。  
 > 林夫人：はい、そうです。  
-> デュポンと申しますがが、林先生はいらっしゃいますか。  
+>  デュポン：デュポンと申しますがが、林先生はいらっしゃいますか。  
 > 林夫人：あいにく、ちょうっと出かけております。  
-> そうですか…。では、すみませんが、JLPTのN3に合格した<span style="color:red">と伝えていただきたい</span>んですが…。  
+>  デュポン：そうですか…。では、すみませんが、JLPTのN3に合格した<span style="color:red">と伝えていただきたい</span>んですが…。  
 > 林夫人：そうですか。おめでとうございます。主人が戻りました、そのように*伝えておきます。
 
 
