--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -934,7 +934,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 10月になりました。最近寒くな<span style="color:red">ってきました</span>。（9月ちょっと寒い ↗️ 10月もっと寒い）
  
 <!-- -->
-> 雨が降るから傘をもっ<span style="color:red">ていった</span>方がいいよ。（まだ降っていません）
+> 雨が降るから傘をも<span style="color:red">っていった</span>方がいいよ。（まだ降っていません）
   
  
 ## 4.G) がする  <a name="chapter_4_7"></a>
