--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -928,7 +928,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
  -- てくる --> 🧔🏻 -- ていく -->
  
-> 私は2時間前にお昼ご飯を食べました。食べた時はお腹がいっぱいでしたが・・たんたんお腹がすい<span style="color:red">てきました</span>。
+> 私は2時間前にお昼ご飯を食べました。食べた時はお腹がいっぱいでしたが・・だんだんお腹がすい<span style="color:red">てきました</span>。
  
 <!-- -->
 > 10月になりました。最近寒くな<span style="color:red">ってきました</span>。（9月ちょっと寒い ↗️ 10月もっと寒い）
@@ -981,7 +981,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 新聞に書いてありました。「フランスでは KPOP が人気<span style="color:red">である</span>」
 
 <!-- -->
-> 旅行の雑誌を読みます。「去年、日本人が一番旅行した区には台湾<span style="color:red">である</span>」
+> 旅行の雑誌を読みます。「去年、日本人が一番旅行した国は台湾<span style="color:red">である</span>」
 
 <!-- -->
 > 世界のレポートを読みます。「世界で一番長く生きるのは日本人<span style="color:red">である</span>」
