--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -911,18 +911,18 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）  
 > B：うん。  
 > A：どこへ<span style="color:red">行くの？</span>↗️（＝行くんですか？）  
-> B：アメリカへ<span style="color:red">行くの</span>。↘️（＝行くんだ）
+> B：アメリカへ<span style="color:red">行くの。</span>↘️（＝行くんだ）
 
 <!-- -->
 > A：ケータイをなくしたんですか。/ ケータイを<span style="color:red">なくしたの？</span>
-> B：どこかて落としたんです。/ どこかで<span style="color:red">落としたの</span>。  
+> B：どこかて落としたんです。/ どこかで<span style="color:red">落としたの。</span>  
 > A：どこで失くしたんですか。/ どこで<span style="color:red">失くしたの？</span>  
-> B：わかりません。/ <span style="color:red">わからないの</span>。
+> B：わかりません。/ <span style="color:red">わからないの。</span>
 
 <!-- -->
-> A：どうしたんですか。/ どう<span style="color:red">したの？  
-> B：気分が悪いんですか。/ 気分が<span style="color:red">わるいの？  
-> C：頭が痛いんです。 / 頭が<span style="color:red">痛いの。
+> A：どうしたんですか。/ どう<span style="color:red">したの？</span>  
+> B：気分が悪いんですか。/ 気分が<span style="color:red">わるいの？</span>  
+> C：頭が痛いんです。 / 頭が<span style="color:red">痛いの。</span>
 
 ## 4.F) Vてくる・Vていく <a name="chapter_4_6"></a>
 
