Add go to top icon

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1,3 +1,5 @@
+<span id="top"></span>
+
 # 2021-2022 目次
 
 <ol start="0">
@@ -985,3 +987,5 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 <!-- -->
 > 世界のレポートを読みます。「世界で一番長く生きるのは日本人<span style="color:red">である</span>」
+
+<a style="position: fixed; bottom: 5px; right: 5px; z-index: 0; font-size: large;" href="#top">⬆️</a>
