--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1,15 +1,3 @@
-<span id="top"></span>
-
-# 2021-2022 目次
-
-<ol start="0">
-	<li>[Rappels](#chapter_0)</li>
-	<li>[第1課](#chapter_1)</li>
-	<li>[第2課](#chapter_2)</li>
-	<li>[第3課](#chapter_3)</li>
-	<li>[第4課](#chapter_4)</li>
-</ol>
-
 # 0 Rappels 中級へ行こう <a name="chapter_0"></a>
 
 ## 0.A) Vた＋ものだ <a name="chapter_0_1"></a>
@@ -988,4 +976,4 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > 世界のレポートを読みます。「世界で一番長く生きるのは日本人<span style="color:red">である</span>」
 
-<a style="position: fixed; bottom: 5px; right: 5px; z-index: 0; font-size: large;" href="#top">⬆️</a>
+<a style="position: fixed; bottom: 5px; right: 5px; z-index: 0; font-size: large;" href="#title-block-header">⬆️</a>
