Remove no longer needed anchors

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1,6 +1,6 @@
-# 0 Rappels 中級へ行こう <a name="chapter_0"></a>
+# 0 Rappels 中級へ行こう
 
-## 0.A) Vた＋ものだ <a name="chapter_0_1"></a>
+## 0.A) Vた＋ものだ
 
 過去の状態やよく起こったことを思い出して言う時の表現。
 
@@ -9,7 +9,7 @@
 <!-- -->
 > 弟は、小さいころ、質問ばかりして親を困らせ<span style="color:red">たものだ</span>。
 
-## 0.B) Vdico / Vない / いadjい / なadjな ＋ものだ　(普通）<a name="chapter_0_2"></a>
+## 0.B) Vdico / Vない / いadjい / なadjな ＋ものだ　(普通）
 
 一般的に～である。(Bon sens / normal)
 
@@ -22,7 +22,7 @@
 > 性格なんて、そう簡単に変わらない<span style="color:red">ものだよ</span>。（変わる<span style="color:red">ものではない</span>よ）
 
 
-## 0.C) Vdico / Vない / いadjい / なadjな ＋ものだ　（べき）<a name="chapter_0_3"></a>
+## 0.C) Vdico / Vない / いadjい / なadjな ＋ものだ　（べき）
 
 一般的に～をするのが常識だ・～をするべきだ。
 
@@ -34,7 +34,7 @@
 <!-- -->
 > お父さんが選んでくれたブローチなんだから、気に入らなくてもそんな顔をする<span style="color:red">ものじゃない</span>。
 
-## 0.D) 普通形 / なadjな / Nの ＋ため（に）　この / その ＋ため（に）<a name="chapter_0_4"></a>
+## 0.D) 普通形 / なadjな / Nの ＋ため（に）　この / その ＋ため（に）
 ＜原因・理由＞
 
 > 事故があった<span style="color:red">ため</span>（事故の<span style="color:red">ため</span>）、電車がなかなか来なかった。
@@ -45,7 +45,7 @@
 <!-- -->
 > 明日、台風が来るそうだ。<span style="color:red">そのため</span>、学校が休みになった。
 
-## 0.E) Vdico/Nの＋ため（に）<a name="chapter_0_5"></a>
+## 0.E) Vdico/Nの＋ため（に）
 
 ＜目的＞
 
@@ -72,7 +72,7 @@
 <!-- -->
 > 会議があるため、友達との約束をキャンセルしなければならない。＝＞原因・理由
 
-## 0.F) によって <a name="chapter_0_6"></a>
+## 0.F) によって
 
 1. 受身の時、行為をする人：  
 > 映画はリュミエール兄弟<span style="color:red">によって</span>発見されました。
@@ -83,7 +83,7 @@
 3. 手段・方法：  
 > ロックダウン中でも、インターネット<span style="color:red">によって</span>、美術館の絵を見ることができた。
 
-## 0.G) 受身 <a name="chapter_0_7"></a>
+## 0.G) 受身
 
 1er : 読ま<s>ない</s><span style="color:red">れる</span>
  
@@ -94,7 +94,7 @@ Irrégulier :
 - する -> <span style="color:red">される</span>
 - 来る -> <span style="color:red">来られる</span>
 
-## 0.H) 使役 <a name="chapter_0_8"></a>
+## 0.H) 使役
 
 1er : 読ま<s>ない</s><span style="color:red">せる</span>
  
@@ -105,7 +105,7 @@ Irrégulier :
 - する -> <span style="color:red">させる</span>
 - 来る -> <span style="color:red">来される</span>
 
-## 0.I) 使役受身：～（さ）さられる・～される <a name="chapter_0_9"></a>
+## 0.I) 使役受身：～（さ）さられる・～される
 
 1er : 
 
@@ -119,7 +119,7 @@ Irrégulier :
 - する -> <span style="color:red">させられる</span>
 - 来る -> <span style="color:red">来させられる</span>
 
-# 第1課 <a name="chapter_1"></a>
+# 第1課
 
 ## 学習目標
 
@@ -127,7 +127,7 @@ Irrégulier :
 2. 聞き取れなかった内容が尋ねられる
 3. 看板や表示を読んで、意味が確認できる
 
-## 1.A) 合成語：～口 <a name="chapter_1_1"></a>
+## 1.A) 合成語：～口
 
 1. 人や物が出入りする所。駅や建物などで、よく使われる。
 2. 移動動詞、役割、方角（東西南北）の言葉と一緒によく使われる。
@@ -135,7 +135,7 @@ Irrégulier :
 	- 役割 (rôle) : 改札口、みどりの窓口
 	- 方角 (direction) : 東口
 	
-## 1.B) ～って / ～て <a name="chapter_1_2"></a>
+## 1.B) ～って / ～て
 
 ＊引用(citation)の「と」（ex ~と言う / ～と思う）の話し言葉。   
 ＊注意書きや看板などの読み方や意味を尋ねるとき使われる。
@@ -149,7 +149,7 @@ Irrégulier :
 > マルタン：すみません、さっきのアナウンスは何<span style="color:red">て</span>言っていたんですか。  
 > 横にいる人：事故で電車が遅れている<span style="color:red">って</span>言っていましたよ。
 
-## 1.C) Vはいい <a name="chapter_1_3"></a>
+## 1.C) Vはいい
 
 ＊「Vばいいですか」…助言(conseil)や指示(indication)がほしい時にする質問の言い方。（「みんなの日本語初級」L35）   
 ＊「Vばいい」…そうすることがいい考えだと勧める言い方。
@@ -176,7 +176,7 @@ Irrégulier :
 > マルタン：明日のテニスの試合、もうし雨が降ったら、とうすれ<span style="color:red">ばいい</span>  ですか。  
 > 村山：室内のコートがありますから、そこで試合をすれ<span style="color:red">ばいい</span>  ですよ。
 
-## 1.D) ～というのは・・・っていうことだ <a name="chapter_1_4"></a>
+## 1.D) ～というのは・・・っていうことだ
 
 ＊言葉の意味の説明。
 
@@ -187,7 +187,7 @@ Irrégulier :
 <!-- -->
 > 「不便」<span style="color:red">とういのは</span>、便利じゃない<span style="color:red">ということです</span>。
 
-## 1.E) 外来語：外国がら入って来た言葉 <a name="chapter_1_5"></a>
+## 1.E) 外来語：外国がら入って来た言葉
 
 1.  カタカナで書く。  
 ❗　カタカナでも外来語ではない言葉があるので注意。  
@@ -207,7 +207,7 @@ ex. サンプル<span style="color:red">な</span>デザインの車
 パーティー<span style="color:red">をします</span>　ドライブ<span style="color:red">する</span>
 
 
-# 第2課 <a name="chapter_2"></a>
+# 第2課
 
 ## 学習目標
 
@@ -215,7 +215,7 @@ ex. サンプル<span style="color:red">な</span>デザインの車
 2. 伝言が頼める
 3. ファックスの内容が読める
 
-## 2.A) ほど <a name="chapter_2_1"></a>
+## 2.A) ほど
 
 ＊ 数量＋ほど  
 「ほど」…「くらい」よりも、少しフォーマルなニュアンス。書き言葉でよく用いれる。  
@@ -233,7 +233,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 急に飲み会が決まったので、来たのは10人<span style="color:red">ほど</span>だった。
 
-## 2.B) V<s>ます</s>＋そうだ（「みんなの日本語初級」L43）<a name="chapter_2_2"></a>
+## 2.B) V<s>ます</s>＋そうだ（「みんなの日本語初級」L43）
 
 ＊～そうです：目で見た様子を伸びる表現。
 
@@ -318,7 +318,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 先月、足にけがをしたが、もうあまり痛くないので、一週間後にはジョギングが出来<span style="color:red">そうだ</span>。
 
-## 2.C) 普通形 / なadj<s>な</s> / N<s>だ</s>＋でしょうか <a name="chapter_2_3"></a>
+## 2.C) 普通形 / なadj<s>な</s> / N<s>だ</s>＋でしょうか
 
 - 「～ですか / ますか」の丁寧な言い方
 
@@ -340,7 +340,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 > 課長：わかりました。2時の会議には出席できますよね。  
 > 西川：はい、大丈夫です。ありがうございます。
 
-## 2.D) あいにく <a name="chapter_2_4"></a>
+## 2.D) あいにく
 
 ＊物事が思うとおりに進まなくて、残念だという気持ちを表す。
 
@@ -367,7 +367,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 3月にスキーに行くつもりだったが、<span style="color:red">あいにく</span>ロックダウンになって行けなかった。
 
-## 2.E) ～と伝えていただきたい  <a name="chapter_2_5"></a>
+## 2.E) ～と伝えていただきたい 
 
 ＊伝言を頼む時の、とても丁寧な言い方。
 
@@ -385,7 +385,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 \* 「そう」より、「そのように」のほうが丁寧な言い方。
 
-## 2.F) ～ということですね  <a name="chapter_2_6"></a>
+## 2.F) ～ということですね 
 
 ＊聞いている人が繰り返して確認する表現。  
 聞いている人と話している人の関係によって、表現が変わる。
@@ -432,7 +432,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 > 林：砂糖さんに、会議は<span style="color:blue">3時からになった</span>と伝えていただきたいんですが。  
 > 砂糖の同僚：会議は3時<span style="color:blue">から（になった）</span><span style="color:red">ということですね</span>。
 
-## 2.G) Nだけでなく、Nも　/　Vdicoだけでなく、Vdicoのも <a name="chapter_2_7"></a>
+## 2.G) Nだけでなく、Nも　/　Vdicoだけでなく、Vdicoのも
 
 > 林さんは、英語<span style="color:red">だけでなく、</span>フランス語<span style="color:red">も</span>話せます。
 
@@ -442,7 +442,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 友人の結婚披露宴に招待された<span style="color:red">だけでなく、</span>スピーチ<span style="color:red">も</span>頼まれた。
 
-## 2.H) もし＋普通形 / なadj<s>な</s> ＋ なら（「中級へ行こう」第7課） <a name="chapter_2_8"></a>
+## 2.H) もし＋普通形 / なadj<s>な</s> ＋ なら（「中級へ行こう」第7課）
 
 > 山田：天気予報によると、週末は雪が降るそうですよ。  
 > スミス：本当ですか。鎌倉に行きたかったんですが、雪が降る<span style="color:red">なら</span>家にいます。
@@ -454,14 +454,14 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 
 
 
-# 第3課 <a name="chapter_3"></a>
+# 第3課
 
 ## 学習目標
 1. 何かを頼む前に、理由が説明できる
 2. いろいろな頼み方が工夫できる
 3. 簡単な手紙文が書ける
 
-## 3.A) 縮約形 (contraction) <a name="chapter_3_1"></a>
+## 3.A) 縮約形 (contraction)
 
 ＊話し言葉。丁寧な言い方ではない。
 
@@ -508,7 +508,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 	> 花子：あ、もう10時！楽しくて長話をしちゃった。<span style="color:red">それじゃ</span>、今日はこのへんで。  
 	> 真理子：私も楽しかった。電話してくれて、ありがとう。またね。
 
-## 3.B) Vて＋ほしい / Vないで＋ほしい (N1-2, L16) <a name="chapter_3_2"></a>
+## 3.B) Vて＋ほしい / Vないで＋ほしい (N1-2, L16)
 
 ＊強い言い方にならないように、「Vてほしいんですが」。
 
@@ -528,7 +528,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 > 内田：わかりました。ありがとうございます。
 
 
-## 3.C) 助詞「に」の使い方 <a name="chapter_3_3"></a>
+## 3.C) 助詞「に」の使い方
 ### 「人＋に」：「その人が～」の意味。
 
 1. 可能の意味 (capacité, possibilité)（「～が」と言い換えられる）
@@ -550,7 +550,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > この数学の問題は、中学生<span style="color:red">には</span>難しい。
 
-## 3.D) 助詞の変化：が->の <a name="chapter_3_4"></a>
+## 3.D) 助詞の変化：が->の
 - Dans la proposition déterminante
 
 > これは<u>父｛が/の｝かいた</u>絵です。
@@ -571,7 +571,7 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 地下鉄{❌の/✅が}遅れたので、学校に遅刻した。
 
-## 3.E) ～ことになる / ～ことにする <a name="chapter_3_5"></a>
+## 3.E) ～ことになる / ～ことにする
 
 ### ことになる -> 決めるのは自分ではない*
 
@@ -618,7 +618,7 @@ Vdico / Vない + このにしている
 <!-- -->
 > 食事のときは、たばこを吸わない<span style="color:red">ことにしている</span>。
 	
-## 3.F) 省略 Omission（　）<a name="chapter_3_6"></a>
+## 3.F) 省略 Omission（　）
 
 文を最後まで言わないことがある。
 	
@@ -634,7 +634,7 @@ Vdico / Vない + このにしている
 > 内田　：マリーさん、日本語上手になりましたね。  
 マリー：いええ、まだまだです。もっと勉強し<span style="color:red">ないと</span>（いけません）。
 	
-## 3.G) 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」<a name="chapter_3_7"></a>
+## 3.G) 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」
 <原因・理由>  
 普通形の会話のとき->「～ものだから」「～もんだから」
 
@@ -651,7 +651,7 @@ Vdico / Vない + このにしている
 - ❗18歳になった｛✅から・✅ので・❌ものだから｝、車の運転ができますね。
 - ❗忙しい｛✅から・✅ので・❌ものですから｝手伝ってください。
 
-## 3.H) Vて＋いただけないでしょうか <a name="chapter_3_8"></a>
+## 3.H) Vて＋いただけないでしょうか
 とても丁寧な表現->上司・知らない人・親しくない人へのお願い。
 
 > 電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
@@ -670,7 +670,7 @@ Vdico / Vない + このにしている
 	 9. 教えろ
 	 低
 	 
-## 3.I) ただ＋Vdico＋だけでいい <a name="chapter_3_9"></a>
+## 3.I) ただ＋Vdico＋だけでいい
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
 > 川田：マリーさん、フランス語を教えていただけないでしょうか。  
@@ -681,7 +681,7 @@ Vdico / Vない + このにしている
 > 町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
-## 3.J) 助詞＋は : Emphase <a name="chapter_3_10"></a>
+## 3.J) 助詞＋は : Emphase
 
 
 - 「を」「が」-> 「<s>を</s>＋は」「<s>が</s>＋は」
@@ -708,7 +708,7 @@ Vdico / Vない + このにしている
 <!-- -->
 >　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
 
-## 3.K) 連用中止 (「中級へ行こう」L5） <a name="chapter_3_11"></a>
+## 3.K) 連用中止 (「中級へ行こう」L5）
 
 
 V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なadj<s>な</s>->であり / N＋であり
@@ -777,7 +777,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > 朝起きたら雨が降って<span style="color:red">おり</span>、試合は中止になった。
 
-# 第4課 <a name="chapter_4"></a>
+# 第4課
 
 ## 学習目標
 
@@ -785,7 +785,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 2. 許可が欲しい理由をきちんと説明できる
 3. 許可願いの申請書が正しく書ける
 
-## 4.A) 文脈指示：あれ/あの/それ/その (会話）<a name="chapter_4_1"></a>
+## 4.A) 文脈指示：あれ/あの/それ/その (会話）
 
 - ア -> 話し手も聞き手も知っている場合 / ひとりごと
 - ソ -> 話し手か、聞き手か、どちらか一人だけが知っている場合 / 二人とも知らない場合
@@ -832,7 +832,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 &emsp;&emsp;（中川さん：知っている・長島さん：知らない）
 
-## 4.B) Nのところ <a name="chapter_4_2"></a>
+## 4.B) Nのところ
 
 その人や物が「いる/ある場所、その近く、会社など所属する
 (faire partie de)ところ」の意味。
@@ -850,7 +850,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。  
 > 三島：大丈夫ですよ？じゃあ、会議を予約しておきます。
 
-## 4.C) V(さ)せていただけたい：Vcausatif＋ていただけたい <a name="chapter_4_3"></a>
+## 4.C) V(さ)せていただけたい：Vcausatif＋ていただけたい
 
 何かをしようという気持ちや許可のお願い、目上の人に強く伝える。
 
@@ -874,7 +874,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > 子供が病気なので、休ま<span style="color:red">せていただきたい</span>んですか。
 
-## 4.D) 「なさる」の命令形(forme impérative）<a name="chapter_4_4"></a>
+## 4.D) 「なさる」の命令形(forme impérative）
 
 ＊　V<s>ます</s>＋なさい
 
@@ -896,7 +896,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > パトカーからの指示：そこの車、止まり<span style="color:red">なさい</span>！
 
-## 4.E) V普通形＋の？<a name="chapter_4_5"></a>
+## 4.E) V普通形＋の？
 
 > A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）  
 > B：うん。  
@@ -914,7 +914,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > B：気分が悪いんですか。/ 気分が<span style="color:red">わるいの？</span>  
 > C：頭が痛いんです。 / 頭が<span style="color:red">痛いの。</span>
 
-## 4.F) Vてくる・Vていく <a name="chapter_4_6"></a>
+## 4.F) Vてくる・Vていく
 
  -- てくる --> 🧔🏻 -- ていく -->
  
@@ -927,7 +927,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 雨が降るから傘をも<span style="color:red">っていった</span>方がいいよ。（まだ降っていません）
   
  
-## 4.G) がする  <a name="chapter_4_7"></a>
+## 4.G) がする 
   
 - をする（アクセサリー、けが）
 	- 時計をする
@@ -962,7 +962,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 	<!-- -->
 	> ジェットコースターに乗りました。立てません。（＝<span style="color:red">めまいがします</span>）
 	
-## 4.H) Aな / N + である＝です  <a name="chapter_4_8"></a>
+## 4.H) Aな / N + である＝です 
 
 ＊雑誌や新聞の文章で使われます。
 
