--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -962,9 +962,14 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 	<!-- -->
 	> ジェットコースターに乗りました。立てません。（＝<span style="color:red">めまいがします</span>）
 	
-## 4.H) Aな / N + である＝です 
+## 4.H) ～である
 
-＊雑誌や新聞の文章で使われます。
+N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である  
+(V丁寧形 -> V普通形 / いadj＋です -> いadj<s>です</s>)
+
+＊動詞、い形容詞は「～である」形なし。普通形を使う。  
+＊雑誌や新聞の文章で使われます。  
+＊「～から / ため / 時 / 場合 etc. ＋である」の形も多い。
 
 ❗️ 自分自身の意見をいう時には使いません。
 
@@ -975,5 +980,11 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 <!-- -->
 > 世界のレポートを読みます。「世界で一番長く生きるのは日本人<span style="color:red">である</span>」
+
+<!-- -->
+> 電気自動車、走っている時も非常に静か<span style="color:red">である</span>。
+
+<!-- -->
+> 最近、日本を訪れる外国人観光客が<span style="color:red">多い</span>。
 
 <a style="position: fixed; bottom: 5px; right: 5px; z-index: 0; font-size: large;" href="#title-block-header">⬆️</a>
