--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -988,3 +988,47 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 
 <!-- -->
 > 最近、日本を訪れる外国人観光客が<span style="color:red">多い</span>。
+
+# 第5課
+
+## 学習目標
+
+1. 相手の意向や都合を聞きながら誘うことができる
+2. 待ち合わせ時間や場所を確かめながら話進められる
+3. 相手に失礼のないように、丁寧に誘いを断ることができる
+
+## 5.A) 終助詞
+
+### よ
+
+イントネーションによってニュアンスの違いがでる。
+- イントネーション↗️(少し上がる) -> 😊
+- イントネーション↘️(下がる・強く言う) -> 😠
+　
+1. 忠告 (conseil)
+	> この薬を飲んだら、お酒は飲まない方がいいです<span style="color:red">よ</span>。
+
+	<!-- -->
+	> たばこは体に悪いです<span style="color:red">よ</span>。
+
+2. 勧誘 (invitation)
+	> 横浜で、フランス映画祭があるそうですよ。一緒に行きましょう<span style="color:red">よ</span>。
+
+	<!-- -->
+	> 授業の後、スタバに行ってコーヒーでも飲もう<span style="color:red">よ</span>。
+
+3. 命令・禁止 (ordre・interdiction)
+	> 朝、駅のホームでタバコを吸ってはいけません<span style="color:red">よ</span>。禁煙タイムですから。
+
+	<!-- -->
+	> もう遅いから寝なさい<span style="color:red">よ</span>。
+
+	<!-- -->
+	> 来る前に電話しろ<span style="color:red">よ</span>。
+
+4. 通知・返事 (annonce・réponse)
+	> 疲れたから、もう帰ります<span style="color:red">よ。
+
+	<!-- -->
+	> 母：もう出掛ける時間です<span style="color:red">よ</span>。  
+	> 子供：ちょっと待って。今、行く<span style="color:red">よ</span>。
