--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1032,3 +1032,83 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 	<!-- -->
 	> 母：もう出掛ける時間です<span style="color:red">よ</span>。  
 	> 子供：ちょっと待って。今、行く<span style="color:red">よ</span>。
+
+### ね
+
+イントネーションにより意味が変わる。
+- 上がらないイントネーション（ね↘️　ねぇ↘️）->　同意・賛同
+- 短く、上がるイントネーション（ね（っ）↗️） -> 確認する・念を押す・注意を引く
+
+1. 同意・賛同を求める (demander le consentement ou l'accord)
+	> 今日はいい天気です<span style="color:red">ね</span>。
+	<!-- -->
+	（状況の文＋ね）
+
+	<!-- -->
+	> 「となりのトトロ」、面白かった<span style="color:red">ね</span>。
+	<!-- -->
+	（感想の文＋ね）
+
+2. 確認する (confirmer) (目上、上司には使いにくい)  
+	同僚との会話：
+	> A：来年会は、金曜日の6時半からです<span style="color:red">ね</span>。  
+	> B：はい、そうです。
+
+	<!-- -->
+	友達の会話：
+	>　田中：マルタンさんが教えてくれた仏和辞典のアプリはこれだ<span style="color:red">ね</span>。  
+	> マルタン：うん、そう。便利だよ。
+
+3. 軽く念を押す (rappeler doucement l'attention) （上司、目上は使わない） 
+	友達に：
+	> 春子ちゃんに電話するの、忘れないで<span style="color:red">ね</span>。
+
+	同僚に：
+	> 山口さん、メールの返事、今日中にして<span style="color:red">ね</span>。
+
+4. 注意を引く (attirer l'attention)　（上司、目上は使わない）
+	> 図書館への行き方は<span style="color:red">ね</span>、まず交差点を渡って<span style="color:red">ね</span>、右に行くと<span style="color:red">ね</span>、公園があるから、その中を池のところまで行って<span style="color:red">ね</span>。
+
+	<!-- -->
+	> ええと<span style="color:red">ね</span>、明日の会議の時間だけど<span style="color:red">ね</span>、部長のスケジュールを聞いてから決めるので、決まったらメールします。
+
+### よね
+
+新しい人との会話での確認。(niveau de confiance : 「よね」 <  「ね」)
+
+＊上司や目上の人、あまり親しくない人には使えない。  
+＊男性は「～（だ）よな」も使う。
+
+> 高田：花子ちゃん、ピアノが上手になりました<span style="color:red">よね</span>。
+> 黒川：ええ、毎日練習していましたからね。
+
+<!-- -->
+> エレベーターの前で部長と話している人は、中川さんです<span style="color:red">よね</span>。
+
+### な / なあ
+
+＊感動 (émotion)・うらやましい気持ち (envie) を表す。  
+＊独りごと (monologue)　のように言う。
+
+> お財布を落としちゃった。こまった<span style="color:red">なあ</span>。
+
+<!-- -->
+> 今日は寒い<span style="color:red">なあ</span>。
+
+<!-- -->
+> 庭が広くてプールのある家に住んでみたい<span style="color:red">な</span>。
+
+### かな
+
+独りごと (monologue) のように、決められない気持ちや不確かな (incertain) 気持ちで自分に質問する。
+
+> お腹が痛いから、今日は会社を休もう<span style="color:red">かな</span>。
+
+<!-- -->
+> おばあちゃんへのプレゼント、何にしよう<span style="color:red">かな</span>。
+
+<!-- -->
+> 田中君、今日の飲み会に来る<span style="color:red">かなあ</span>。
+
+<!-- -->
+> 早く暖かくならない<span style="color:red">かなあ</span>。
