--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1087,8 +1087,8 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 
 ### な / なあ
 
-＊感動 (émotion)・うらやましい気持ち (envie) を表す。  
-＊独りごと (monologue)　のように言う。
+感動 (émotion)・うらやましい気持ち (envie) を表す。  
+独りごと (monologue)　のように言う。
 
 > お財布を落としちゃった。こまった<span style="color:red">なあ</span>。
 
