Fix wrong kanji

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1051,7 +1051,7 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 
 2. 確認する (confirmer) (目上、上司には使いにくい)  
 	同僚との会話：
-	> A：来年会は、金曜日の6時半からです<span style="color:red">ね</span>。  
+	> A：新年会は、金曜日の6時半からです<span style="color:red">ね</span>。  
 	> B：はい、そうです。
 
 	<!-- -->
