Add lessons 5.B 5.C and 5.D

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1112,3 +1112,53 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 
 <!-- -->
 > 早く暖かくならない<span style="color:red">かなあ</span>。
+
+## 5.B) 確か～たよね
+
+忘れていたことを思い出した時やはっきり覚えていない場合に、確認する。
+
+> <span style="color:red">確か</span>、１月の第二月曜日は成人の日だっ<span style="color:red">たよね</span>。
+
+> 山口さんのお嬢さんって、<span style="color:red">確か</span>今年18歳でし<span style="color:red">たよね</span>。
+
+> 中川：デュポンさん、<span style="color:red">確か</span>スキーが上手でし<span style="color:red">たよね</span>。  
+> デュポン：そんなに上手じゃないですけど、私でよけべれば教えますよ。   
+> 中川：ありがとうございます。
+
+> 部長は、<span style="color:red">確か</span><u>来週</u>休暇を取る<u>んだっ</u><span style="color:red">たよね</span>。
+
+> マルタンさんは、<span style="color:red">確か</span><u>先月</u>ご両親がフランスから来た<u>んだっ</u><span style="color:red">たよね</span>。
+
+## 5.C) ～んだけど、一緒にどうかなと思って
+
+### ～んだけど：「～んですけど」の普通体
+
+誘ったり、頼んだり、許可や助言をお願いしたりする前に言う。   
+「～んですけど / だけど」の後の文は言わないこともある。
+
+> 映画のチケットがある<span style="color:red">んだけど</span>、一緒にどう？
+
+> 今年JLPTを受けたい<span style="color:red">んですけど</span>、いい問題集があったら教えてくれませんか。
+
+### 一緒にどうかなと思って
+
+誘う時の表現が、「一緒にどう？」よりも控えめな(modeste)言い方。  
+だめかもしれないと思いながら誘う時に使う。
+
+(リオンは遠いので、時間やお金がかかる)：
+> 来月リオンで日本映画のイベントがある<span style="color:red">んだけど、</span>マリーさんも<span style="color:red">一緒にどうかなと思って</span>…。
+
+(私の友達とジャンさんは知り合いではない)：
+> 来週、日本人の友達の家でパーティーがある<span style="color:red">んですけど、</span>日本語で話せるいい機会だし、ジャンさんも<span style="color:red">一緒にどうかなと思って</span>。
+
+## 5.D)　Nでも（一緒に）どうですか
+
+相手が選べるように、Nは一つの例として言う。  
+何かに誘ったり、提案したりする時などに使う。
+
+> 高田：何時の新幹線にのるんですか。  
+> 森川：6時です。まだ時間があるから、お茶<span style="color:red">でもどうですか</span>。
+
+> めぐみ：いつも週末は何してるの(?)。  
+> みどり：特に何も…。家にいてYoutube見たり、ゲームしたり。  
+> めぐみ：少し外に出さないとダメだよ。スケート<span style="color:red">でもう(?)</span>。駅前にスケートリンクが出来たんだよ。
