--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1162,3 +1162,66 @@ N / なadj<s>な</s>＋です -> N / なadj<s>な</s>＋である
 > めぐみ：いつも週末は何してるの(?)。  
 > みどり：特に何も…。家にいてYoutube見たり、ゲームしたり。  
 > めぐみ：少し外に出さないとダメだよ。スケート<span style="color:red">でもう(?)</span>。駅前にスケートリンクが出来たんだよ。
+
+## 5.E) V<s>ます</s>＋たがる / 欲しがる
+
+❌　～さん(tierce personne)は V<s>ます</s>＋たい / 欲しい  
+✅ ～さん(tierce personne)は V<s>ます</s>＋たがる / 欲しがる
+
+❗ 助詞に注意：「N<span style="color:orange">が</span>/<span style="color:orange">を</span>～たい・N<span style="color:orange">が</span>欲しい」-> 「N<span style="color:red">を</span>~たがる・欲しがる」
+
+### たがる：Tendance générable, habitude
+
+> この子は、食事の時にテレビ<u>を</u>見<span style="color:red">たがる</span>。
+
+> 日本ではマニュル車(しゃ)に乗る人は少なく、オートマ車<u>を</u><span style="color:red">欲しがる</span>人の方(ほう)が多い。
+
+### がっている：Désir ou sentiment actuel
+
+> 田中さんは、モン・サン・ミッシェルに行き<span style="color:red">たがっている</span>。
+
+> 娘は新しいiPhoneを<span style="color:red">欲しがっている</span>。
+
+### ❗ 目上の人、上司、親しくない人には使わない。  
+-> 「～とおっしゃっています、～そうです」などの言い方にする。
+
+> 部長は、フランスに行きたい<span style="color:red">とおっしゃっています</span>。
+
+> 部長は、フランスに行きたい<span style="color:red">そうです</span>。
+
+## 5.F) せっかく～のに
+
+のに：forme neutre / なadjな / Nな　＋のに（「みんなの日本語」L45）  
+せっかく：残念な気持ちや、思っていた結果にならなくてがっかりした気持ちを強く言う表現。
+
+### 「せっかくV」：V… l'action de locuteur
+
+Déception, reproche :  
+> 母：<span style="color:red">せっかく</span>電子辞書を買ってあげたのに、全然使っていないじゃない。  
+> 花子：だって、使い方がよくわからないんだもん。
+<!-- --> 
+(「もん」：理由を表すS助詞「もの」のくだけた(familier)言い方。)
+
+Se blâmer :  
+> <span style="color:red">せっかく</span>夜遅くまでがんばって宿題をしたのに、家に忘れてきてsh待った。
+
+### 「せっかくV」V… l'action de l'interlocuteur
+
+Excusez-moi :
+> <span style="color:red">せっかく</span>来てくださった<span style="color:red">のに</span>、父が外出中で申し訳ありません。
+
+Excusez-moi :
+> <span style="color:red">せっかく</span>コンサートに誘ってくださった<span style="color:red">のに</span>、仕事で行けなくて申し訳ありません。
+
+Consolation :
+> マリー：JLPTの試験、どうだった？  
+> ジャン：風で熱が出て、受けられなかったんだ。  
+> マリー：そうだったの…<span style="color:red">せっかく</span>がんはって勉強していた<span style="color:red">のに</span>、残念だったね。
+
+## Vられたと思っている：Expression discrète de souhait　(可能）
+
+もとの形「Vられたら<u>いい</u>と思っている」->「いい」はよく省略される。
+
+> 40歳までに自分の家が<span style="color:red">持てたらとおもっている</span>。
+
+> 田中さんに東京を少し案内して<span style="color:red">もらえたらと思っている</span>んですが、お願いできないでしょうか。
