--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1218,7 +1218,7 @@ Consolation :
 > ジャン：風で熱が出て、受けられなかったんだ。  
 > マリー：そうだったの…<span style="color:red">せっかく</span>がんはって勉強していた<span style="color:red">のに</span>、残念だったね。
 
-## Vられたと思っている：Expression discrète de souhait　(可能）
+## Vられた(可能）らと思っている：Expression discrète de souhait　(可能）
 
 もとの形「Vられたら<u>いい</u>と思っている」->「いい」はよく省略される。
 
