--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1225,3 +1225,38 @@ Consolation :
 > 40歳までに自分の家が<span style="color:red">持てたらとおもっている</span>。
 
 > 田中さんに東京を少し案内して<span style="color:red">もらえたらと思っている</span>んですが、お願いできないでしょうか。
+
+# 第6課
+
+## 6.A) ～のは：forme neutre / なadjな / Nな ＋　のは
+
+「の」…「人/場所/物/事柄/理由」などの代わり。
+
+> Q：どこで生まれましたか  
+> R1：東京郊外のニュータウンで生まれました。  
+> R2：生まれた<span style="color:red">のは</span>、東京郊外のニュータウンです。
+
+> 田中：マルタンさんは、いつから日本語の勉強を始められたんですか。  
+> マルガン：日本語の勉強を始めた<span style="color:red">のは</span>28歳のときです。  
+> 田中：そうですか。日本で勉強されたんですか。  
+> マルタン：日本で勉強した<span style="color:red">のは</span>最初の半年でその後はパリで3年ぐらい学校に行きました。  
+> 田中：じゃあ、その間にJLPTのN2を受けたんですね。  
+> マルタン：そうですね、N2を受けた<span style="color:red">のは</span>、パリで学校に行っている時でした。
+
+> 山中：松田さん、明日乗る新幹線は何時？  
+> 松田：明日乗る<span style="color:red">のは</span>…、ええと…、3時ですね。
+
+> 私が日本住んでいた<span style="color:red">のは</span>、5年前だ。
+
+> 田中さんが結婚しんた<span style="color:red">のは</span>、花子さんです。
+
+## 6.B) ～。で、…
+
+「それで」が短くなった言い方。
+
+> 田中：年末で会社を辞めて、フランスに行きます。  
+> 在藤：えっ、本当？<span style="color:red">で、</span>フランスに行って何するの？
+> 田中：絵の勉強をしたんです。
+
+(3年後…田中さん)
+> フランスに行って、最初はトゥールでフランス語の学校に通ったの。<span style="color:red">で、</span>1年フランス語を勉強してからパリに引っ越し、美術学校に入学したんだ。
