--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1260,3 +1260,63 @@ Consolation :
 
 (3年後…田中さん)
 > フランスに行って、最初はトゥールでフランス語の学校に通ったの。<span style="color:red">で、</span>1年フランス語を勉強してからパリに引っ越し、美術学校に入学したんだ。
+
+## 6.C) Nって、～けど、…ね
+
+「Aって、Cですね」の文に「Bけど」が入っている。  
+「Bけど」の位置は、文頭、文中、文未、どこてもよい。
+
+
+
+> ニュースで見たんです<span style="color:red">けど、</span>ジャパン・エキスポ<span style="color:red">って、</span>たくだんの人が来るんです<span style="color:red">ね</span>。
+
+（って＝というのイベントは）
+
+固有名詞（nom propre）がよくわからないときに、質問文でこの表現が使われる。
+
+> ヴォー・ル・ヴィコント<span style="color:red">って、</span>とこにあるの？きれいなお城だって聞いた<span style="color:red">けど</span>。 
+
+丁寧な文：
+> ヴォー・ル・ヴィコントというのは、どこにあるんですか。きれいなお城だと聞きましたが。
+
+## 6.D) Nみたいに～/みたいだ
+
+### Nみたいに～：代表例としてNを出す。
+
+> フェデラー<span style="color:red">みたいに</span>（のように）、強くて人気のあるテニス選手になりたいな。
+
+> まりこさんは、人形<span style="color:red">みたいに</span>かわいいですね。
+
+> 最近の若い人は、田中さん<span style="color:red">みたいに</span>、車を運転しない人が多いそうですよ。
+
+### N1みたいにN2：よく似たものを出して説明する。
+
+不思議た、変だ、面白いといった印象を受けたときによく用いられる。
+
+> まりこさんパンダ<span style="color:red">みたいな</span>ネコを飼っているんだよ。そのネコ、目の周りと耳が黒いんだ。
+
+> 庭もあって、すごく広いし、お城<span style="color:red">みたいな</span>家ですね。
+
+## 6.E) Vて来る 2️⃣
+
+近づいて来ることを表す。  
+V（移動動詞 verbe de déplacement）＋来る
+
+移動動詞：歩く、走る、泳ぐ、帰る、出る、入る、降りる、上る、転勤する、出張、引っ越す、など。
+
+> 明日、両親が東京へ出<span style="color:red">て来る</span>ので、東京駅まで迎えにいきます。
+
+❌　～出るので…
+
+> 先月転校し<span style="color:red">て来た</span>花子さんは、字がとても上手なんですよ。
+
+❌　~転校した花子さん…
+
+> 最近フランス人の家族が近所に引っ越し<span style="color:red">て来た</span>んですよ。
+
+> 去年いなくなった犬が帰っ<span style="color:red">てきた</span>んです！
+
+> 遅れそうだったので、駅から走っ<span style="color:red">て来ました</span>。
+
+> 小林：今日はストでバスがいないので、会社まで自転車に乗っ<span style="color:red">て来ました</span>。
+> 前田：そうですか。私は40分も歩い<span style="color:red">て来た</span>ので、疲れてしまいました。
