--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1320,3 +1320,12 @@ V（移動動詞 verbe de déplacement）＋来る
 
 > 小林：今日はストでバスがいないので、会社まで自転車に乗っ<span style="color:red">て来ました</span>。  
 > 前田：そうですか。私は40分も歩い<span style="color:red">て来た</span>ので、疲れてしまいました。
+
+## 6.F) Nをとおして
+
+N：人、物事、動作の名詞  
+やや硬い表現。改まった場面や書き言葉で使われることが多い。
+
+> 日本に3年間住みましたが、日本での生活<span style="color:red">をとおして</span>、日本の習慣や日本人の考え方を知ることが出来ました。
+
+> クラブ活動<span style="color:red">をとおして</span>礼儀作法を学んだ。
